force-app/main/default/objects/Custom_Preference__c/Custom_Preference__c.object-meta.xml
<CustomObject>
    <label>Custom Preference</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Custom Preference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>