force-app/main/default/objects/Custom_Preference__c/fields/ContactID__c.field-meta.xml
<CustomField>
    <fullName>ContactID__c</fullName>
    <description>Technical Field to be used in Marketing Cloud.
It contains Person Contact ID to relate to Subscriber Key.</description>
    <formula>CASESAFEID(Person_account__r.PersonContactId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactID</label>
    <type>Text</type>
</CustomField>