force-app/main/default/objects/Custom_Preference__c/fields/Date_of_creation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_creation__c</fullName>
    <label>Date of creation</label>
    <type>Date</type>
</CustomField>