force-app/main/default/objects/Custom_Preference__c/fields/Person_account__c.field-meta.xml
<CustomField>
    <fullName>Person_account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Custom Preferences</relationshipLabel>
    <relationshipName>Custom_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>